Disable incremental compilation
Until Gradle 7 is released, disable incremental compilation, as
per:

  https://melix.github.io/blog/2021/03/gradle-java16.html

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ plugins {
   id 'application'
 }
 
+tasks.withType(JavaCompile).configureEach {
+  options.incremental = false
+}
+
 repositories {
   jcenter()
 }
