--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,14 @@ dependencies {
   implementation group: 'com.itextpdf', name: 'kernel', version: '7.2.4'
   implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
 
-  testImplementation group: 'junit', name: 'junit', version: '4.13.2'
+  testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.2'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
   testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.11.0'
+}
+
+test {
+  useJUnitPlatform()
 }
 
 application {
